# CourseWorkVNA

./: README.md  index.html  server.py  serverWS.py
driver/: CMakeLists.txt  TreadSafeQueue.h  VNAKit.h  VNAKitDevice.cpp  VNAKitDevice.h  main.cpp
driver/var/lib/vnakit/DB/: VNAKit.db  VNAKit.db.sig  certificate.sig  globals.db  globals.db.sig
driver/var/lib/vnakit/Images/Download/: OctopusDownloadFW.img
js/: index.js  smith.js
measurement/: 2match3.csv  2match6.csv  3db3.csv  3db6.csv  bpf3.csv  bpf6.csv  brainrot3.csv  brainrot6.csv  long3.csv  long6.csv  lonh3.csv  lonh6.csv  main.py  match.csv  match3.csv  match6.csv  open.csv  open3.csv  open6.csv  short.csv  short3.csv  short6.csv  throw3.csv  throw6.csv  vlf3.csv  vlf6.csv  vnakit.py
react-app/: mainPage.html  package-lock.json  package.json  settingsPage.html
react-app/lib/: babel.min.js
react-app/src/: GraphData.js  Graphic.js  GraphicSParams.js  SettingsVNA.js  WSResponse.js  graphsCreation.jsx  main.js  wsClient.js
react-app/src/settingsPage/: main.js
